# data-engineering-zoomcamp

./: .gitignore  pyproject.toml
markdown/own_mds_n_notes/: bind_mount_named_volumen.md  c_sharp_vs_rust.md  cobol_rpg_in_c_sharp.md  practice_dockerfiles_naming.md  project_toml_anfänger.md  pyproject_toml_uv_doku.md  rool_quant_dev_requirements.md  uv_doku.md  uv_from_requirements.md  uv_im_projekt_bestehndes.md  uv_umzug_wf.md  uv_wf_rookie.md  wf_uv_pratice.md
work/docker_learn/: Dockerfile.uv
work/docker_learn/test/: list_files.py  text_sample.txt
work/own_notebooks/: ny_taxi_data.ipynb
