[project]
name = "data-engineering-zoomcamp"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.2",
    "psycopg[binary,pool]>=3.3.3",
    "pyarrow>=24.0.0",
    "sqlalchemy>=2.0.49",
    "tqdm>=4.67.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_engineering_zoomcamp"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.4.0",
]
